# cp2077-extractor

./: .bumpversion.cfg  .pre-commit-config.yaml  CONTRIBUTING.rst  MANIFEST.in  README.rst  formate.toml  pyproject.toml  repo_helper.yml  requirements.txt  setup.cfg  setup.py  tox.ini
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
cp2077_extractor/: __init__.py  radio_dj.py  redarchive_reader.py  track.py  utils.py
cp2077_extractor/cr2w/: __init__.py  datatypes.py  enums.py  header_structs.py  io.py  textures.py  utils.py
